--- a/my-business-card/src/App.css
+++ b/my-business-card/src/App.css
@@ -40,15 +40,51 @@
   color: #888;
 }
 
-.myImage {
-  max-width: 317px;
-  max-height: 317px;
+
+.my-photo {
+  max-width: 380px;
+  max-height: 388px;
   margin-bottom: 0;
+ 
+}
+
+.container {
+  margin: -20px 414px 0px 414px;
+  padding: 15px 35px;
+
+}
+
+.info-container {
+  margin: 0px 400px 0px 400px;
+}
+h1 , h4 {
+  margin:0;
+}
+
+h4 {
+  color: #F3BF99;
+}
+h4, h5 {
+  font-weight: normal;
+}
+
+.button-container {
+  display: flex;
+  justify-content:space-between;
+  margin: 20px;
+}
+
+.button {
+  width: 128px;
+}
+
+.button-img {
+  display: inline-block;
+  padding: 2.5px;
 }
 
 .email-button {
   background-color: white;
-  padding: 20px; 
 }
 
 .linkedIn-button {
@@ -57,14 +93,49 @@
 
 .email-button-text {
   color: black;
-  
 }
 
 .linkedIn-button-text {
   color: white;
 }
 
-.Info {
-  background-color: aquamarine;
+.footer-container {
+  display: flex;
+  justify-content:center;
+  align-items: baseline;
+}
+
+.content{
+  text-align: left;
+  background-color: #1A1B21;
+}
+
+.content-header {
+  padding: 0;
+  
+}
+
+.content-text {
+  margin:-20px 0px 0px 0px;
+}
+
+.footer-image {
+  margin: 12px;
+}
+
+.footer-container {
+  background-color: #161619
+}
+
+.info-container {
+  background-color: #1A1B21;
+  margin: 0px 414px 0px 414px;
+  padding: 15px 35px;
+}
+
+.my-image {
+  display: flex;
+  justify-content: center;
   margin-top: 0;
+  padding:0px
 }
